2011-08-08  Eric Seidel  <eric@webkit.org>

        Move the --leaks bot back over to NRWT now that I'm back
        from vacation and able to debug it.

        Unreviewed.

        * Scripts/run-webkit-tests:
        (usingWebKit2):
        (useNewRunWebKitTests):

2011-08-05  Dimitri Glazkov  <dglazkov@chromium.org>

        Wire up updating expectations in garden-o-matic.
        https://bugs.webkit.org/show_bug.cgi?id=65794

        Reviewed by Adam Barth.

        * Scripts/webkitpy/layout_tests/port/factory.py: Moved _port_for_builder from rebaseline.py to here, rename to get_from_builder_name.
        * Scripts/webkitpy/tool/commands/rebaseline.py: Adapted callsites to new location.
        * Scripts/webkitpy/tool/servers/gardeningserver.py: Added GardeningExpectationsUpdater, which knows how to update expectations.
        * Scripts/webkitpy/tool/servers/gardeningserver_unittest.py: Added loads of tests.

2011-08-08  Jochen Eisinger  <jochen@chromium.org>

        webkit-patch doesn't get along with renamed files
        https://bugs.webkit.org/show_bug.cgi?id=48075

        Possibly a bit heavy handed - I removed all instances of -C and
        changed every instance of -M with '--no-renames' in git.py. This
        forces git to not try to tell us about renames at all, which is
        ultimately the behaviour we want. The old file is shown deleted,
        then the new file is shown added, followed by any changes that
        occurred. Also gets rid of the problem where deleting one file
        and adding another file which has similar content would
        unexpectedly show up as a rename, and fall out of a diff.

        Based on a patch by Wyatt Carss.

        Reviewed by Eric Seidel.

        * Scripts/webkitpy/common/checkout/scm/git.py:

2011-08-07  Sam White  <samuel.white@rochester.edu>

        Add the ability to search the AccessibilityObject cache
        https://bugs.webkit.org/show_bug.cgi?id=64994
        